test/kobra-code/semantic-errors/bad-statement.ks
x = 100
say (x)
9 - 2.7